Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35203

Missing shortcut for "next" and "back" buttons in wizards

XMLWordPrintable

    • 6714196f45fbae755b26a4b2406a7bbe066084dc (5.3.0 dev, 13.1.2014)

      1. Build trivialwizard example ( qtbase\examples\widgets\dialogs\trivialwizard\trivialwizard.pro ).
      2. Start the example and click "Next".
      3. Press Alt+Left, the keyboard shortcut for the "back" button.
        Nothing happens.
      4. Press Alt+Right, the keyboard shortcut for the "next" button.
        Nothing happens.
      5. Click the "Back" button in the upper left corner of the wizard.
        The wizard goes back to the first page.

      The shortcut which works in native dialogs should work in Qt dialogs, too.

      Found while updating Creator's Squish test tst_create_proj_wizard: https://codereview.qt-project.org/71942

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes