QWizard/Windows: Add keyboard shortcut for 'Next'/'Back'.

Task-number: QTBUG-35203

Change-Id: If7312e8675b21be9dc6836b92805dc87007205e7
Reviewed-by: Marc Mutz <marc.mutz@kdab.com>